Prepare app for deployment
